Fix for overlapping 'Evidence' link at narrow widget widths.

--- a/root/css/main.css
+++ b/root/css/main.css
@@ -708,7 +708,11 @@ div#create-prompt {
   text-overflow: ellipsis;
 }
 
-.text-min:hover div.more, div.more:hover, .result:hover div.ev-more-text span, .result:hover .v, div.columns div.ui-icon-close:hover {
+.text-min:hover div.more, 
+div.more:hover, 
+.result:hover div.ev-more-text span, 
+.result:hover .v, 
+div.columns div.ui-icon-close:hover {
   opacity:1;
   filter:alpha(opacity=100);
   -moz-opacity:1;
@@ -724,21 +728,14 @@ div#create-prompt {
 }
 
 .ev-more-text {
-  text-align:center;
   font-size:0.8em;
-  width:4em;
-  margin:0 auto;
-  padding-right:4em;
+  margin:-8px auto 0;
 }
 
 .ev-more-text span {
-  z-index:2;
-  position:absolute;
   background-color:white;
   padding:0 2px;
   color:#999;
-  text-align:center;
-  width:4em;
 }
 
 tr.odd .ev-more-text span {
@@ -746,9 +743,10 @@ tr.odd .ev-more-text span {
 }
 
 .ev-more {
-  width:100%;
-  position:relative;
   height:1em;
+  text-align: center;
+  margin: 15px 10px;
+  border-top: 1px solid rgba(0,0,0,0.3);
 }
 
 .ev {
@@ -756,30 +754,14 @@ tr.odd .ev-more-text span {
 }
 
 .ev-more .v {
-  position:absolute;
   opacity:0.3;
   filter:alpha(opacity=30);
   -moz-opacity:0.3;
-  z-index:1;
 }
 
 .ev-more .ui-icon {
-  position:relative;
-  margin:0 auto 0;
-  top:0.7em;
-  z-index:3;
-}
-
-.ev-more.open .ui-icon {
-  top:-6px;
-}
-
-.ev-more-line {
-  width: 80%;
-  left: 10%;
-  border-top:1px solid black;
-  position:absolute;
-  top:0.7em;
+  display:inline-block;
+  margin-top:-3px;
 }
 
 div.more {
@@ -818,7 +800,6 @@ a#fade:hover, a.fade:hover {
 
 .result {
   padding:0 0.5em 0.5em;
-  position:relative;
 }
 
 .result.evidence{
@@ -2758,16 +2739,20 @@ h3.jbrowse-view-header {
   background: #9C4041;
 }
 
-
+div.detail-box-wrapper{
+  background:#fff;
+  float:right;
+  margin: 0.5em 0;
+  padding-right: 20px;
+  padding-left: 20px;
+  max-width:25em;
+/*   min-width:19em; */
+}
 
 div.detail-box{
   border:1px solid #AAA;
   background:#E9EEF2;
   padding: 0.5em;
-  float:right;
-  margin:0.5em;
-  max-width:25em;
-/*   min-width:19em; */
   word-wrap: break-word;
 }
 
